--- a/YaqiZhou/appsettings.json
+++ b/YaqiZhou/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-YaqiZhou-f3691215-1533-4425-8fe6-bcb9fe0caf1e;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=sqlYaqi;Database=sqlYaqi;User Id=sa;Password=Abcd5678@;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
